# gigolo

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.I18N  README.md  THANKS  TODO  autogen.sh  configure  configure.ac  configure.ac.in  gigolo.1.in  gigolo.desktop.in  meson.build  meson_options.txt  module.xml  sion.1.in  sion.desktop.in  waf  wscript
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gigolo.pot  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  (+25 more)
src/: Makefile  Makefile.am  backendgvfs.c  backendgvfs.h  bookmark.c  bookmark.h  bookmarkdialog.c  bookmarkdialog.h  bookmarkeditdialog.c  bookmarkeditdialog.h  bookmarkpanel.c  bookmarkpanel.h  browsenetworkdialog.c  browsenetworkdialog.h  browsenetworkpanel.c  browsenetworkpanel.h  common.c  common.h  compat.c  compat.h  gigolo.gresource.xml  gigolo.ui  main.c  main.h  menubuttonaction.c  menubuttonaction.h  meson.build  mountdialog.c  mountdialog.h  mountoperation.c  mountoperation.h  passworddialog.c  passworddialog.h  preferencesdialog.c  preferencesdialog.h  settings.c  settings.h  singleinstance.c  singleinstance.h  window.c  (+1 more)
tests/: uri_parsing.c
